--- a/index.html
+++ b/index.html
@@ -60,8 +60,15 @@
       
 </div>
 
+<div>
+	
+	<h4>Upcoming Talks</h4>
+	<ul>
+	<li> Nov 13: <em>Double-dimer condensation and the dP3 quiver</em> in the <a href="https://math.ethz.ch/news-and-events/events/research-seminars/algebraic-geometry-and-moduli-seminar.html?s=hs20"> Algebraic geometry and moduli seminar</a> at ETH Z&uuml;rich </p>
+</li>
+</ul>
 
-   
+   </div>
 
 
     </div>
