--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="nav">   
                 <div class="on"><a href="index.html">About</a></div>        
                 <div class="off"><a href="publications.html">Publications</a></div>
-                <div class="off"> <a href="cv.pdf" target="_blank">CV</a></div> 
+                <div class="off"> <a href="CV_Jenne.pdf" target="_blank">CV</a></div> 
                 <div class="off"><a href="seminar.html">Talks</a></div>      
                 <div class="off"><a href="teaching.html">Teaching</a></div>
                                          
