--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <div class="off"><a href="publications.html">Publications</a></div>
                 <div class="off"><a href="seminar.html">Talks</a></div>      
                 <div class="off"><a href="teaching.html">Teaching</a></div>
-                <div class="off"> <a href="CVOct21.pdf" target="CVOct21.pdf">CV</a></div> 
+                <div class="off"> <a href="CV_Jenne.pdf" target="CV_Jenne.pdf">CV</a></div> 
                                          
     </div> 
     
@@ -77,7 +77,9 @@
 	<h4>Upcoming Travel</h4>
 	<ul>
 	<li> May 15-19, 2023: <a href="https://math.ryerson.ca/waw2023/Hypergraphs.pdf"> Workshop on Modelling and Mining Complex Networks as Hypergraphs</a> 
-	at Toronto Metropolitan University </p>
+	at Toronto Metropolitan University 
+</li>
+	<li> June 19-23, 2023: <a href="https://aimath.org/workshops/upcoming/apphomalg/"> Applied homological algebra beyond persistence diagrams (AIM workshop)</a>, American Institute of Mathematics, San Jose, CA
 </li>
 </ul>
 
