--- a/publications.html
+++ b/publications.html
@@ -117,7 +117,10 @@ Jonsson.</font> </div>
           <p><font size="2"><b>Abstract:</b> In a recent book, Benjamin and Quinn ask about the combinatorial implications of Euler’s continued fraction
 e = [2,(1, 1),(1, 2),(2, 3),(3, 4), . . . ]. In this paper, we explore those implications through two special types of permutations, namely, derangements and scramblings. </font></p>
 </div>  
-    
+
+</div>
+
+
           <div class="paper">
 		  <p class="title"> <b>Hypergraph Topological Features for Autoencoder-Based Intrusion Detection for Cybersecurity Data</b> with Bill Kay (lead author), S. Aksoy, M. Baird, D. Best, C. Joslyn, C. Potvin, G. Henselman-Petrusek, G. Seppala, S. Young, and E. Purvine. Conference Proceedings of ICML workshop on Machine Learning for Cybersecurity, 2022.</p>
 	 </p>
