--- a/publications.html
+++ b/publications.html
@@ -18,7 +18,7 @@
                 <div class="on"><a href="publications.html">Publications</a></div>
                  <div class="off"><a href="seminar.html">Talks</a></div>   
                 <div class="off"><a href="teaching.html">Teaching</a></div>
-<div class="off"> <a href="cv.pdf" target="_blank">CV</a></div>  
+<div class="off"> <a href="CV_Jenne.pdf" target="CV_Jenne.pdf">CV</a></div> 
                                           
     </div> 
     
