--- a/seminar.html
+++ b/seminar.html
@@ -17,7 +17,7 @@
                 <div class="off"><a href="index.html">About</a></div>        
                 <div class="off"><a href="publications.html">Publications</a></div>
                 <div class="on"><a href="seminar.html">Talks</a></div>  
-                <div class="off"><a href="teaching.html">Teaching</a></div>
+               <!-- <div class="off"><a href="teaching.html">Teaching</a></div> -->
          <div class="off"> <a href="CV_Jenne.pdf" target="CV_Jenne.pdf">CV</a></div>                            
     </div> 
     
@@ -66,7 +66,7 @@
 </li>
    </ul>
  
- <p><font size="4">A complete list of the research and expository talks I have given can be found on my <a href="CVOct21.pdf" target="CVOct21.pdf">CV </a>.</font>
+ <p><font size="4">A complete list of the research and expository talks I have given can be found on my <a href="CV_Jenne.pdf" target="CV_Jenne.pdf">CV </a>.</font>
   <!--    <h4>Some Seminar</h4>
       
       <p>
